src/style.css
@import url(//fonts.googleapis.com/css?family=Lato:300:400);

body {
  margin:0;
}

h1 {
  font-family: 'Lato', sans-serif;
  font-weight:400;
  letter-spacing: 2px;
  font-size:58px;


}
h2 {
    font-family: 'Lato', sans-serif;
    font-weight:400;
    letter-spacing: 1px;
    font-size:30px;

  }
p {
  font-family: 'Lato', sans-serif;
  letter-spacing: 1px;
  font-size:20px;
  color: #333333;
}


.fa {
    padding: 20px;
    font-size: 80px;
    width: 20px;
    margin: 5px 2px;
    text-align: center;
    text-decoration: none;
    border-radius: 50%;
  }

.fa:hover {
    opacity: 0.7;
  }

.fa-instagram{
    background: #FFFFFF;
    color: black
    
}  
span.linee{
  width: 50px;
}
.header {
  position:relative;
  text-align:center;
  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
  color:white;

}
.linee{
  
  width: 70px;
  height: 70px;
  left: 10px;  
}
.logo {
  width:0px;
}

.inner-header {
  height:100px;
  width:100%;
  margin: 0;
  padding: 0;
}
.Insta{
    height:100px;
  width:100%;
  margin: 0;
  padding: 0;
  
}


.flex { /*Flexbox for containers*/
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.waves {
  position:relative;
  width: 100%;
  height:15px;
  margin-bottom:-5px; /*Fix for safari gap*/
  min-height:180px;
  max-height:150px;
}

.content {
  position:relative;
  height:10vh;
  text-align:center;
  background-color: white;
}


/* Animation */

.parallax > use {
  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
}
.parallax > use:nth-child(1) {
  animation-delay: -2s;
  animation-duration: 7s;
}
.parallax > use:nth-child(2) {
  animation-delay: -3s;
  animation-duration: 10s;
}
.parallax > use:nth-child(3) {
  animation-delay: -4s;
  animation-duration: 13s;
}
.parallax > use:nth-child(4) {
  animation-delay: -5s;
  animation-duration: 20s;
}
@keyframes move-forever {
  0% {
   transform: translate3d(-90px,0,0);
  }
  100% { 
    transform: translate3d(85px,0,0);
  }
}
/*Shrinking for mobile*/
@media (max-width: 768px) {
  .waves {
    height: 2px;
    min-height:20px;
  }
  .content {
    height:30px;
  }
  h1 {
    font: size 40px;

  }
}



img{
    width: 40%;
    max-width: 300px;
    border: solid 2px #fff;
    border-radius: 15px;
    
    animation: up-down 2s infinite ease-in-out alternate;

  }
  .bottom{
    background-color: blue;
text-align: center;
position: fixed;
bottom: 0;




  }
  
  @keyframes up-down{
    from{
      transform: translatey(0px);
    }
    to{
      transform: translatey(-10px);
    }
  }


  .sidenav {
    font-family: 'Lato', sans-serif;
    font-weight:400;
    letter-spacing: 1px;
    font-size:30px;
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #111;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
  }

  
  .sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
    transition: 0.3s;
  }
  
  .sidenav a:hover {
    color: #f1f1f1;
  }
  
  .sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
  }
  
  @media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
  }

